--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,15 @@
           <artifactId>item-nbt-api-plugin</artifactId>
           <version>2.3.1</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.13.3</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
